# mafw-grilo-source

./: AUTHORS  Makefile.am  configure.ac  mafw-grilo-source-uninstalled.pc.in
debian/: changelog  control  copyright  mafw-grilo-source.mafw.xsession  mafw-grilo-source.postinst  mafw-grilo-source.prerm  rules
mafw-grilo-source/: Makefile.am  mafw-grilo-source.c  mafw-grilo-source.h
